SeatGeek: Add height to the places to prevent overflow.

--- a/share/spice/seat_geek/seat_geek.css
+++ b/share/spice/seat_geek/seat_geek.css
@@ -12,7 +12,7 @@
 
 /* IE causes one-line to break when word-break is set to something. */
 .zci--seat_geek .tile__body {
-    word-break: normal;
+    word-break: initial;
 }
 
 .zci--seat_geek .price {
@@ -63,6 +63,7 @@
 
 .zci--seat_geek .where {
     font-size: 1.1em;
+    height: 1.4em;
 }
 
 .zci--seat_geek .where.city,
